<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/weather"
        android:onClick="displayWeatherPage"
        android:title="@string/weather" />
    <item
        android:id="@+id/shareMenuItem"
        android:onClick="displaySharePage"
        android:title="@string/share" />
    <item
        android:id="@+id/viewPinItemLabel"
        android:title="@string/view_pins" >
        <menu >
            <group
                android:id="@+id/viewPinGroup"
                android:checkableBehavior="all" >
                <item
                    android:id="@+id/checkBoxSights"
                    android:checkable="true"
                    android:checked="true"

                    android:icon="@drawable/ic_check_box_black_24dp"
                    android:title="@string/sights" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/transportItemLabel"
        android:title="@string/transport" >
        <menu >
            <group
                android:id="@+id/transportGroup"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/checkBoxOnFoot"
                    android:checkable="true"
                    android:checked="true"

                    android:icon="@drawable/ic_check_box_black_24dp"
                    android:onClick="changeTransportCheckValue"
                    android:title="@string/on_foot" />
                <item
                    android:id="@+id/checkBoxCar"
                    android:checkable="true"

                    android:icon="@drawable/ic_check_box_outline_blank_black_24dp"
                    android:onClick="changeTransportCheckValue"
                    android:title="@string/car" />
            </group>
        </menu>
    </item>

</menu>